--- a/ansible/playbook-03-local-access.yaml
+++ b/ansible/playbook-03-local-access.yaml
@@ -1,15 +1,14 @@
 #
 # Playbook to connect a cluster to the local machine (for remote kubectl access)
 #
---- 
+---
 
 - name: Get settings file
   hosts: primary_master
   remote_user: root
-  gather_facts: no
-  any_errors_fatal: yes
+  gather_facts: false
+  any_errors_fatal: true
   roles:
-  - local_access
+    - local_access
   tags:
-  - local_access
-
+    - local-access
