--- a/ansible/roles/ha_settings/tasks/main.yaml
+++ b/ansible/roles/ha_settings/tasks/main.yaml
@@ -3,26 +3,30 @@
 #
 ---
 - name: Create script for waiting for secondary masters
-  ansible.builtin.template: "src=wait-for-single-master.sh.j2 dest=/tmp/wait-for-master-{{ master }}.sh mode=0755"
+  ansible.builtin.template:
+    src: wait-for-single-master.sh.j2
+    dest: /tmp/wait-for-master-{{ master }}.sh
+    mode: "0755"
   with_items:
-  - "{{ groups['masters'] }}"
+    - "{{ groups['masters'] }}"
   loop_control:
     loop_var: master
   when: "'primary_master' in group_names"
 
 - name: Wait for secondary master to be ready
-  ansible.builtin.command: "sh /tmp/wait-for-master-{{ master }}.sh"
+  ansible.builtin.command: "sh /tmp/wait-for-master-{{ master }}.sh" # noqa no-changed-when
   with_items:
-  - "{{ groups['secondary_masters'] }}"
+    - "{{ groups['secondary_masters'] }}"
   loop_control:
     loop_var: master
   when: "'primary_master' in group_names"
 
 - name: Set coredns replicas
-  ansible.builtin.shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/coredns"
+  ansible.builtin.shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl scale --replicas={{ groups['masters'] | length }} -n kube-system deployment/coredns" # noqa yaml[line-length] no-changed-when
   when: "'primary_master' in group_names"
 
 - name: Remove override script to primary master (keepalived only)
-  ansible.builtin.file: path=/etc/keepalived/check_override.sh state=absent
+  ansible.builtin.file:
+    path: /etc/keepalived/check_override.sh
+    state: absent
   when: "'primary_master' in group_names and LOAD_BALANCING == 'nginx'"
-
