--- a/ansible/roles/prepare_nodes/tasks/main.yaml
+++ b/ansible/roles/prepare_nodes/tasks/main.yaml
@@ -4,18 +4,28 @@
 ---
 
 - name: Make sure some needed software is installed via package manager
-  ansible.builtin.package: "name={{ item }} state=present"
+  ansible.builtin.package:
+    name: "{{ item }}"
+    state: present
   with_items:
-  - perl
-  - kubelet-{{ KUBERNETES_VERSION }}
-  - kubectl-{{ KUBERNETES_VERSION }}
-  - kubeadm-{{ KUBERNETES_VERSION }}
-  - kubernetes-cni-{{ KUBERNETES_CNI_VERSION }}
+    - perl
+
+- name: Install kubeadm
+  ansible.builtin.include_tasks:
+    file: "{{ playbook_dir }}/tasks/install-or-upgrade-kubeadm.yaml"
+
+- name: Install OS-native Kubernetes software
+  ansible.builtin.include_tasks:
+    file: "{{ playbook_dir }}/tasks/install-or-upgrade-k8n-packages.yaml"
 
 - name: Enable kubelet
-  ansible.builtin.service: "name=kubelet enabled=yes"
+  ansible.builtin.service:
+    name: kubelet
+    enabled: true
 
-- name: Create setup directory 
-  ansible.builtin.file: "path=/root/setup state=directory mode=0755"
+- name: Create setup directory
+  ansible.builtin.file:
+    path: /root/setup
+    state: directory
+    mode: "0755"
   when: "'primary_master' in group_names"
-
