--- a/ansible/roles/usual_suspects/tasks/primary_master.yaml
+++ b/ansible/roles/usual_suspects/tasks/primary_master.yaml
@@ -7,9 +7,11 @@
   loop: "{{ groups['masters'] }}"
 
 - name: Check for known-to-be-problematic configuration. Here kube-vip
-  ansible.builtin.fail: msg="Configuration problem detected - when using 'kube-vip' you need to set APISERVER_LB_PORT to '6443'."
+  ansible.builtin.fail:
+    msg: "Configuration problem detected - when using 'kube-vip' you need to set APISERVER_LB_PORT to '6443'."
   when: "LOAD_BALANCING == 'kube-vip' and APISERVER_LB_PORT != 6443"
 
 - name: Check for known-to-be-problematic configuration. Here keepalived
-  ansible.builtin.fail: msg="Configuration problem detected - when not using 'kube-vip' you need to set APISERVER_LB_PORT to something not '6443'."
+  ansible.builtin.fail:
+    msg: "Configuration problem detected - when not using 'kube-vip' you need to set APISERVER_LB_PORT to something not '6443'."
   when: "LOAD_BALANCING != 'kube-vip' and APISERVER_LB_PORT == 6443"
