--- a/ansible/group_vars/md_kubernetes.yaml
+++ b/ansible/group_vars/md_kubernetes.yaml
@@ -1,18 +1,25 @@
-
 #
 # Variables for the 'md-kubernetes' environment
 #
---- 
+---
 CLUSTER_NAME: md-kubernetes
-#PROXY_SERVER: http://proxy.dermalog.hh:3128
+# PROXY_SERVER: http://proxy.dermalog.hh:3128
 INSECURE_REGISTRY: dockerregistry.backend.dc.dermalog.hh:5000
 POD_NETWORK_CIDR: 10.244.0.0/16
 NETWORK_PLUGIN: flannel
-#NETWORK_PLUGIN: calico
-#NETWORK_PLUGIN: weavenet
-#NFS_SHARE: /var/nfsshare
-#NFS_MOUNT: /var/kubernetes
+# NETWORK_PLUGIN: calico
+# NETWORK_PLUGIN: weavenet
+# NFS_SHARE: /var/nfsshare
+# NFS_MOUNT: /var/kubernetes
 SETUP_DOCKER: true
-#ETCD_HOSTING: "external"
-APISERVER_LB_PORT: 6443
+
+# ETCD_HOSTING: "external"
+
+# Settings for kube-vip
+# APISERVER_LB_PORT: 6443
 LOAD_BALANCING: "kube-vip"
+
+# Settings for keepalived
+# APISERVER_LB_PORT: 8443
+# LOAD_BALANCING: "haproxy"
+# LOAD_BALANCING: "nginx"
