--- a/ansible/roles/network_plugin/tasks/calico.yaml
+++ b/ansible/roles/network_plugin/tasks/calico.yaml
@@ -5,4 +5,7 @@
 
 - name: Download 'calico' network plugin yaml
   delegate_to: localhost
-  ansible.builtin.get_url: "dest=/tmp/net.yaml url={{ CALICO_YAML_URL }}"
+  ansible.builtin.get_url:
+    dest: /tmp/net.yaml
+    url: "{{ CALICO_YAML_URL }}"
+    mode: "0644"
