--- a/ansible/roles/upgrade_masters/tasks/upgrade-master.yaml
+++ b/ansible/roles/upgrade_masters/tasks/upgrade-master.yaml
@@ -4,19 +4,24 @@
 ---
 
 - name: Create script for running upgrade with retries
-  ansible.builtin.template: "src=upgrade-with-retries.sh.j2 dest=/root/upgrade-with-retries.sh mode=0755"
+  ansible.builtin.template:
+    src: upgrade-with-retries.sh.j2
+    dest: /root/upgrade-with-retries.sh
+    mode: "0755"
   when: "master == inventory_hostname"
 
 - name: Perform upgrade with retries on master
-  ansible.builtin.shell: "set -o pipefail; /root/upgrade-with-retries.sh 2>&1 | tee /tmp/upgrade.log"
+  ansible.builtin.shell: "set -o pipefail; /root/upgrade-with-retries.sh 2>&1 | tee /tmp/upgrade.log" # noqa no-changed-when
   when: "master == inventory_hostname"
 
 - name: Create script for waiting for master
   delegate_to: localhost
-  ansible.builtin.template: "src=wait-for-single-master.sh.j2 dest=/tmp/wait-for-master-{{ inventory_hostname }}.sh mode=0755"
+  ansible.builtin.template:
+    src: wait-for-single-master.sh.j2
+    dest: "/tmp/wait-for-master-{{ inventory_hostname }}.sh"
+    mode: "0755"
   when: "master == inventory_hostname"
 
 - name: Wait for master
   ansible.builtin.script: "/tmp/wait-for-master-{{ inventory_hostname }}.sh"
   when: "master == inventory_hostname"
-
